test/bad/loops/else04.px

while true do
    skip
else do
    break
